<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/ThemeColor"
        android:gravity="center"
        android:text="高级设置"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:id="@+id/rl_video_codec"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/videocodec"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_video_codec"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/imageView2"
            android:layout_toStartOf="@+id/imageView2"
            android:gravity="center"
            android:text=""
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:id="@+id/rl_datachannel_net"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/datachannel_net"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_datachannel_net"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/imageView4"
            android:layout_toStartOf="@+id/imageView4"
            android:gravity="center"
            android:text=""
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/otheroption_auto_video"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_auto_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/otheroption_auto_audio"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_auto_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/videooption_scalefull"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_videooption_scalefull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/videooption_autorotation"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_videooption_autorotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/audiooption_audio_aec_on"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_audiooption_audio_aec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/audiooption_audio_aec_DAE_on"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_audiooption_audio_aec_dae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/audiooption_audio_agc_on"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_audiooption_audio_agc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />
</LinearLayout>